# Kobo

./: .gitignore  DOCUMENTATION.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yaml  env.example  pyproject.toml
agent/: explain.py  main.py  mcp_client.py  reconcile.py  writeback.py
dashboard/: README.md
data/: generate_mock_data.py
examples/sample_findings/: sample_findings.json
ingestion/: emit_to_datahub.py  structured_properties.yaml
scripts/: setup_datahub.sh  smoke_test_mcp.py
